--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Media Server API for DigitalOcean",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "concurrently \"node app.js\" \"react-scripts start\"",
+    "start-server": "node app.js",
+    "start-frontend": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
@@ -13,16 +18,41 @@
   "author": "Tanmay Vij",
   "license": "ISC",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "aws-sdk": "^2.809.0",
     "aws4": "^1.11.0",
     "axios": "^0.21.0",
     "bcrypt-nodejs": "0.0.3",
+    "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.7",
     "multer": "^1.4.2",
-    "xml-js": "^1.6.11",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1",
+    "web-vitals": "^0.2.4",
     "xml2js": "^0.4.23"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
